최종학력 연습문제

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">스피너테스트</string>
     <string name="job">직업</string>
+    <string name="final_school">최종학력</string>
 </resources>
